force-app/main/default/objects/APEX_Customer__c/fields/Check__c.field-meta.xml
<CustomField>
    <fullName>Check__c</fullName>
    <defaultValue>false</defaultValue>
    <description>this is check box</description>
    <label>Check</label>
    <type>Checkbox</type>
</CustomField>