force-app/main/default/objects/APEX_Customer__c/fields/Phone_Nunber__c.field-meta.xml
<CustomField>
    <fullName>Phone_Nunber__c</fullName>
    <description>add your phone number</description>
    <inlineHelpText>add mobile no here</inlineHelpText>
    <label>Phone Nunber</label>
    <type>Phone</type>
</CustomField>