force-app/main/default/objects/APEX_Customer__c/fields/PickOne__c.field-meta.xml
<CustomField>
    <fullName>PickOne__c</fullName>
    <description>Select one</description>
    <label>PickOne</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
            <value>
                <fullName>D</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>